tenzir/integration/data/reference/python/test_python_operator_invalid_syntax/step_01.ref
error: File "<inline>", line 1
    @@
     ^
SyntaxError: invalid syntax
 = note: python process exited with error